--- a/index.html
+++ b/index.html
@@ -46,43 +46,46 @@
     <aside>
         <div>
             <a href="index.html">
-                <img src="./images/man-silhouette.jpg" alt="Kumaresan Perumal" title="Kumaresan Perumal">
+                <img src="./images/man-silhouette.jpg" style="border-radius: 50%;max-width: 140px" alt="Kumaresan Perumal" title="Kumaresan Perumal">
             </a>
             <h2><a href="index.html">Kumaresan Perumal</a></h2>
 
             <p>Software Engineering Professional</p>
             <p>Full Stack Web Developer</p>
-            <nav>
-                <ul class="list">
-                    <!-- <li><a href="index.html">Resume</a></li> -->
 
-                </ul>
-            </nav>
-
-            <!--
             <ul class="social">
                 <li>
-                    <a class="sc-linkedin" href="https://www.linkedin.com/in/tgrecojr/" target="_blank">
-                        <i class="fab fa-linkedin">
-            </i>
+                    <a class="sc-linkedin" href="https://www.linkedin.com/in/kumaresan-perumal-584894a3/" target="_blank">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="sc-github" href="https://github.com/tgrecojr" target="_blank">
-                        <i class="fab fa-github">
-            </i>
+                    <a class="sc-github" href="https://github.com/kumaresan-perumal" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="sc-fa-envelope-o" href="mailto:bluejays5666@gmail.com" target="_blank">
-                        <i class="fab fa-fa-envelope-o">
-            </i>
+                    <a class="sc-fa-envelope-o" href="https://stackoverflow.com/users/2976424/kumaresan-perumal" target="_blank">
+                        <i class="fa fa-stack-overflow" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
-          -->
+
         </div>
 
+        <div class="tech-logo" style="background: none;">
+            <img src="./images/java.png" />
+            <img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" />
+            <img src="./images/590px-Node.js_logo.svg.png" />
+            <img src="./images/angular.png" />
+            <img src="./images/postgresql-seeklogo.com.svg" />
+            <img src="./images/Python-logo-notext.svg" />
+
+            <img src="./images/Maven_logo.svg" />
+            <img src="./images/58481057cef1014c0b5e4951.png" />
+            <img src="./images/800px-Bootstrap_logo.svg.png" />
+
+        </div>
 
     </aside>
 
@@ -140,19 +143,20 @@
                         <hr>
                         <h3><i class="fa fa-cogs mr-2" aria-hidden="true"></i>Skills</h3>
                         <br>
-                        <p><strong>Frameworks :</strong> Spring MVC & REST, Spring Boot, Hibernate, Spring Data JPA, Spring Security
+                        <p><strong>Frameworks :</strong> Spring MVC & REST, Spring Boot, Hibernate, Spring Data JPA, Spring Security, Django Basics
                         </p>
                         <p><strong>Logging Framework :</strong> Log4j</p>
                         <p><strong>Build Automation Tools :</strong> Maven</p>
-                        <p><strong>Databases :</strong> MySQL, PostgreSQL</p>
-                        <p><strong>Languages :</strong> Core Java & 8</p>
-                        <p><strong>Web Languages :</strong> HTML, CSS, JavaScript</p>
-                        <p><strong>Web Frameworks :</strong> Bootstrap, Angular 8</p>
-                        <p><strong>Web Library :</strong> JQuery</p>
+                        <p><strong>Databases :</strong> MySQL, PostgreSQL, MongoDB</p>
+                        <p><strong>Languages :</strong> Core Java & 8, Python3 Basics</p>
+                        <p><strong>Web Languages :</strong> HTML4, CSS3, SCSS, JavaScript, Typescript, NodeJS(JSruntime)</p>
+                        <p><strong>Web Frameworks :</strong> Bootstrap4, Angular 8, Angular Material 8 </p>
+                        <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
                         <p><strong>Version Control :</strong> GitHub, GitLab</p>
-                        <p><strong>IDE :</strong> Eclipse, Spring Tool Suite</p>
-                        <p><strong>Bug Tracker Tool :</strong> Trello, Jira</p>
-
+                        <p><strong>IDE :</strong> Eclipse, Spring Tool Suite, VS code</p>
+                        <p><strong>Bug Tracker Tool :</strong> Trello, Jira, YouTrack</p>
+                        <p><strong>Rest Client :</strong> Postman</p>
+                        <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
                         <hr>
 
                         <h3><i class="fa fa-tasks mr-2" aria-hidden="true"></i>Projects</h3>
