--- a/index.html
+++ b/index.html
@@ -74,17 +74,15 @@
         </div>
 
         <div class="tech-logo" style="background: none;">
-            <img src="./images/java.png" />
-            <img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" />
-            <img src="./images/590px-Node.js_logo.svg.png" />
-            <img src="./images/angular.png" />
-            <img src="./images/postgresql-seeklogo.com.svg" />
-            <img src="./images/Python-logo-notext.svg" />
-
-            <img src="./images/Maven_logo.svg" />
-            <img src="./images/58481057cef1014c0b5e4951.png" />
-            <img src="./images/800px-Bootstrap_logo.svg.png" />
-
+            <a href="https://www.java.com/en/" target="_blank"><img src="./images/java.png" /></a>
+            <a href="https://spring.io/" target="_blank"><img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" /></a>
+            <a href="https://nodejs.org/en/" target="_blank"><img src="./images/590px-Node.js_logo.svg.png" /></a>
+            <a href="https://angular.io/" target="_blank"><img src="./images/angular.png" /></a>
+            <a href="https://www.postgresql.org/" target="_blank"><img src="./images/postgresql-seeklogo.com.svg" /></a>
+            <a href="https://www.python.org/" target="_blank"><img src="./images/Python-logo-notext.svg" /></a>
+            <a href="https://maven.apache.org/" target="_blank"><img src="./images/Maven_logo.svg" /></a>
+            <a href="https://www.mysql.com/" target="_blank"><img src="./images/58481057cef1014c0b5e4951.png" /></a>
+            <a href="https://getbootstrap.com/" target="_blank"><img src="./images/800px-Bootstrap_logo.svg.png" /></a>
         </div>
 
     </aside>
@@ -118,10 +116,10 @@
                             <li>Around 5+ years of IT experience in design, development, implementation and Web Applications uisng Java</li>
                             <li>Experience in SDLC (Software Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile methodology</li>
                             <li>Experience in design and development of web based applications uisng Core Java, Java8, Spring MVC & REST, Spring Boot, Hibernate, Spring Data JPA, Spring Security, Maven, Log4J </li>
-                            <li>Experience with Spring Tool Suite and Eclipse</li>
+                            <li>Experience with Spring Tool Suite, Eclipse and VS code</li>
                             <li>Experience in client side technologies such as HTML5, CSS3, Typescript, Jquery, JSON, Angular 8, Bootstrap 4</li>
-                            <li>Experience with MySQL, PostgreSQL</li>
-                            <li>Familiar in deploying applications through nginx server</li>
+                            <li>Experience with MySQL, PostgreSQL, MongoDB</li>
+                            <li>Familiar in deploying applications through nginx server in Amazon</li>
                             <li>Strong debugging and troubleshooting skills</li>
                         </ul>
                         <hr>
@@ -156,6 +154,9 @@
                         <p><strong>IDE :</strong> Eclipse, Spring Tool Suite, VS code</p>
                         <p><strong>Bug Tracker Tool :</strong> Trello, Jira, YouTrack</p>
                         <p><strong>Rest Client :</strong> Postman</p>
+                        <p><strong>Data Interchange :</strong> JSON, XML</p>
+                        <p><strong>Web Server :</strong> Nginx</p>
+                        <p><strong>Web Hosting :</strong> Amazon, Digital Ocean</p>
                         <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
                         <hr>
 
