--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                         <p><strong>Logging Framework :</strong> Log4j</p>
                         <p><strong>Build Automation Tools :</strong> Maven</p>
                         <p><strong>Databases :</strong> MySQL, PostgreSQL, MongoDB</p>
+                        <p><strong>Backend Library :</strong> Apache POI</p>
                         <p><strong>Languages :</strong> Core Java & 8, Python3 Basics</p>
                         <p><strong>Web Languages :</strong> HTML4, CSS3, SCSS, JavaScript, Typescript, NodeJS(JSruntime)</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap4, Angular 8, Angular Material 8 </p>
@@ -157,6 +158,7 @@
                         <p><strong>Data Interchange :</strong> JSON, XML</p>
                         <p><strong>Web Server :</strong> Nginx</p>
                         <p><strong>Web Hosting :</strong> Amazon, Digital Ocean</p>
+                        <p><strong>Mail Service :</strong> postmarkapp.com, mailchimp.com</p>
                         <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
                         <hr>
 
@@ -205,6 +207,16 @@
                             Axys is an investment management company that manages investment portfolios for investors. Axys wants to provide a platform so that investors and other users can login in and view their portfolios.
                         </p>
                         <br>
+
+                        <!--
+                        <p><strong>Festivya Batch</strong><br>
+                        </p>
+                        <p><em>Description</em></p>
+                        <p>
+                            The batch uploaded the products from excel to Festivya ecommerce.
+                        </p>
+                        <br>
+                        -->
 
                         <p><strong>Cleaning House Management System</strong><br>
                         </p>
