--- a/index.html
+++ b/index.html
@@ -85,40 +85,7 @@
             <a href="https://getbootstrap.com/" target="_blank"><img src="./images/800px-Bootstrap_logo.svg.png" /></a>
         </div> -->
 
-        <div class="row" style="margin-left: 0px; margin-right: 0px ;">
-            <div id="small-img" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center arrange-img tech-logo">
-                <ul style="list-style-type:none;padding: 0%;">
-                    <li>
-                        <a href="https://www.java.com/en/" target="_blank"><img src="./images/java.png" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://spring.io/" target="_blank"><img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://nodejs.org/en/" target="_blank"><img src="./images/590px-Node.js_logo.svg.png" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://angular.io/" target="_blank"><img src="./images/angular.png" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://www.postgresql.org/" target="_blank"><img src="./images/postgresql-seeklogo.com.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://www.python.org/" target="_blank"><img src="./images/Python-logo-notext.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://maven.apache.org/" target="_blank"><img src="./images/Maven_logo.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://www.mysql.com/" target="_blank"><img src="./images/58481057cef1014c0b5e4951.png" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
-                    <li>
-                        <a href="https://getbootstrap.com/" target="_blank"><img src="./images/800px-Bootstrap_logo.svg.png" class="img-responsive inline-block" alt="Responsive image" /></a>
-                    </li>
 
-                </ul>
-            </div>
-        </div>
 
     </aside>
 
@@ -277,6 +244,42 @@
                         <p>
                             <strong>Bachelor of Applied Science (BSc Computer Science) 2007-2010</strong><br> Periyar University, <br> Tamil Nadu, India.
                         </p>
+                    </div>
+
+                    <hr>
+                    <div class="row" style="">
+                        <div id="small-img" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center arrange-img tech-logo">
+                            <ul style="list-style-type:none;padding: 0%;">
+                                <li>
+                                    <a href="https://www.java.com/en/" target="_blank"><img src="./images/java.png" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://spring.io/" target="_blank"><img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://nodejs.org/en/" target="_blank"><img src="./images/590px-Node.js_logo.svg.png" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://angular.io/" target="_blank"><img src="./images/angular.png" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.postgresql.org/" target="_blank"><img src="./images/postgresql-seeklogo.com.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.python.org/" target="_blank"><img src="./images/Python-logo-notext.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://maven.apache.org/" target="_blank"><img src="./images/Maven_logo.svg" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.mysql.com/" target="_blank"><img src="./images/58481057cef1014c0b5e4951.png" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+                                <li>
+                                    <a href="https://getbootstrap.com/" target="_blank"><img src="./images/800px-Bootstrap_logo.svg.png" class="img-responsive inline-block" alt="Responsive image" /></a>
+                                </li>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
