--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:description" content="Kumaresan Perumal">
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="index.html">
-    <meta property="og:image" content="/images/headshot.jpg">
+    <meta property="og:image" content="/images/image8.jpeg">
 
 </head>
 
@@ -46,9 +46,10 @@
     <aside>
         <div>
             <a href="index.html">
-                <img src="./images/man-silhouette.jpg" style="border-radius: 50%;max-width: 140px" alt="Kumaresan Perumal" title="Kumaresan Perumal">
+                <img src="./images/image10.jpeg" style="border-radius: 50%;
+                height: 211px;" alt="Kumaresan Perumal" title="Kumaresan Perumal">
             </a>
-            <h2><a href="index.html">Kumaresan Perumal</a></h2>
+            <h2 class="mt-4"><a href="index.html">Kumaresan Perumal</a></h2>
 
             <p>Software Engineering Professional</p>
             <p>Full Stack Web Developer</p>
