--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <aside>
         <div>
             <a href="index.html">
-                <img src="./images/image10.jpeg" style="border-radius: 50%;
-                height: 211px;" alt="Kumaresan Perumal" title="Kumaresan Perumal">
+                <img src="./images/IMG_1925.jpg" style="border-radius: 50%;
+                height: 250px;" alt="Kumaresan Perumal" title="Kumaresan Perumal">
             </a>
             <h2 class="mt-4"><a href="index.html">Kumaresan Perumal</a></h2>
 
