--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                         <ul>
                             <li>Around 5+ years of IT experience in design, development, implementation and Web Applications uisng Java</li>
                             <li>Experience in SDLC (Software Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications uisng Core Java, Java 8, Spring MVC & REST, Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
+                            <li>Experience in design and development of web based applications uisng Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
                             <li>Experience with Spring Tool Suite, Eclipse and VS code</li>
                             <li>Experience in client side technologies such as HTML 5, CSS 3, Typescript, Jquery, JSON, Angular 8, Bootstrap 4</li>
-                            <li>Experience with MySQL, PostgreSQL, MongoDB</li>
+                            <li>Experience with PostgreSQL, MySQL, MongoDB</li>
                             <li>Familiar in deploying applications through nginx server in Amazon</li>
                             <li>Strong debugging and troubleshooting skills</li>
                         </ul>
@@ -144,11 +144,11 @@
                         <hr>
                         <h3><i class="fa fa-cogs mr-2" aria-hidden="true"></i>Skills</h3>
                         <br>
-                        <p><strong>Frameworks :</strong> Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Django Basics
+                        <p><strong>Frameworks :</strong> Spring Boot, Spring Framework (MVC & REST), Spring Data JPA, Spring Security, Django Basics
                         </p>
                         <p><strong>Logging Framework :</strong> Log4j</p>
                         <p><strong>Build Automation Tools :</strong> Maven</p>
-                        <p><strong>Databases :</strong> MySQL, PostgreSQL, MongoDB</p>
+                        <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
                         <p><strong>Languages :</strong> Core Java & 8, Python 3 Basics</p>
                         <p><strong>Web Languages :</strong> HTML 4, CSS 3, SCSS, JavaScript, Typescript, NodeJS(JSruntime)</p>
