--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <li>Around 5+ years of IT experience in design, development, implementation and Web Applications uisng Java</li>
                             <li>Experience in SDLC (Software Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile Methodology</li>
                             <li>Experience in design and development of web based applications uisng Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
-                            <li>Experience with Spring Tool Suite, Eclipse and VS code</li>
+                            <li>Experience with Spring Tool Suite and VS code</li>
                             <li>Experience in client side technologies such as HTML 5, CSS 3, Typescript, Jquery, JSON, Angular 8, Bootstrap 4</li>
                             <li>Experience with PostgreSQL, MySQL, MongoDB</li>
                             <li>Familiar in deploying applications through nginx server in Amazon</li>
@@ -155,10 +155,10 @@
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
                         <p><strong>Version Control :</strong> GitHub, GitLab</p>
-                        <p><strong>IDE :</strong> Eclipse, Spring Tool Suite, VS code</p>
+                        <p><strong>IDE :</strong> Spring Tool Suite, VS code</p>
                         <p><strong>Bug Tracker Tool :</strong> Trello, Jira, YouTrack</p>
                         <p><strong>Rest Client :</strong> Postman</p>
-                        <p><strong>Data Interchange :</strong> JSON, XML</p>
+                        <p><strong>Data Interchange :</strong> JSON</p>
                         <p><strong>Web Server :</strong> Nginx</p>
                         <p><strong>Web Hosting :</strong> Amazon, Digital Ocean</p>
                         <p><strong>Mail Service :</strong> postmarkapp.com, mailchimp.com</p>
