--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                         <h3><i class="fa fa-user mr-2" aria-hidden="true"></i>Profile Summary</h3>
                         <ul>
                             <li>Around 5+ years of IT experience in design, development, implementation and Web Applications uisng Java</li>
-                            <li>Experience in SDLC (Software Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile Methodology</li>
+                            <li>Experience in SDLC (Software Development Life Cycle.) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile Methodology</li>
                             <li>Experience in design and development of web based applications uisng Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
                             <li>Experience with Spring Tool Suite and VS code</li>
-                            <li>Experience in client side technologies such as HTML 5, CSS 3, Typescript, Jquery, JSON, Angular 8, Bootstrap 4</li>
+                            <li>Experience in client side technologies such as HTML 5, CSS 3, JavaScript, Jquery, JSON, Angular 8, Bootstrap 4, Angular Material 8</li>
                             <li>Experience with PostgreSQL, MySQL, MongoDB</li>
                             <li>Familiar in deploying applications through nginx server in Amazon</li>
                             <li>Strong debugging and troubleshooting skills</li>
@@ -151,7 +151,7 @@
                         <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
                         <p><strong>Languages :</strong> Core Java & 8, Python 3 Basics</p>
-                        <p><strong>Web Languages :</strong> HTML 4, CSS 3, SCSS, JavaScript, Typescript, NodeJS(JSruntime)</p>
+                        <p><strong>Web Languages :</strong> HTML 4, CSS 3, SCSS, JavaScript, NodeJS(JSruntime)</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
                         <p><strong>Version Control :</strong> GitHub, GitLab</p>
