--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <li>Experience with Spring Tool Suite and VS code</li>
                             <li>Experience in client side technologies such as HTML 5, CSS 3, JavaScript, Jquery, JSON, Angular 8, Bootstrap 4, Angular Material 8</li>
                             <li>Experience with PostgreSQL, MySQL, MongoDB</li>
-                            <li>Familiar in deploying applications through nginx server in Amazon</li>
+                            <li>Familiar in deploying applications through nginx server in Amazon AWS</li>
                             <li>Strong debugging and troubleshooting skills</li>
                         </ul>
                         <hr>
@@ -160,7 +160,7 @@
                         <p><strong>Rest Client :</strong> Postman</p>
                         <p><strong>Data Interchange :</strong> JSON</p>
                         <p><strong>Web Server :</strong> Nginx</p>
-                        <p><strong>Web Hosting :</strong> Amazon, Digital Ocean</p>
+                        <p><strong>Web Hosting :</strong> Amazon AWS, Digital Ocean</p>
                         <p><strong>Mail Service :</strong> postmarkapp.com, mailchimp.com</p>
                         <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
                         <hr>
