--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                         <hr>
                         <h3><i class="fa fa-user mr-2" aria-hidden="true"></i>Profile Summary</h3>
                         <ul>
-                            <li>Around 5+ years of IT experience in design, development, implementation and Web Applications uisng Java</li>
-                            <li>Experience in SDLC (Software Development Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implemention, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications uisng Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
+                            <li>Around 5+ years of IT experience in design, development, implementation and Web Applications using Java</li>
+                            <li>Experience in SDLC (Software Development Life Cycle) that includes requirement Analysis, Desgin, Coding, Testing, Implementation, Maintenance with Agile Methodology</li>
+                            <li>Experience in design and development of web based applications using Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
                             <li>Experience with Spring Tool Suite and VS code</li>
                             <li>Experience in client side technologies such as HTML 5, CSS 3, JavaScript, Jquery, JSON, Angular 8, Bootstrap 4, Angular Material 8</li>
                             <li>Experience with PostgreSQL, MySQL, MongoDB</li>
-                            <li>Familiar in deploying applications through nginx server in Amazon AWS</li>
+                            <li>Familiar in deploying applications through Nginx server in Amazon AWS</li>
                             <li>Strong debugging and troubleshooting skills</li>
                         </ul>
                         <hr>
