--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <h2 class="mt-4"><a href="index.html">Kumaresan Perumal</a></h2>
 
             <p>Software Engineering Professional</p>
-            <p>Full Stack Web Developer</p>
+            {% comment %} <p>Full Stack Web Developer</p> {% endcomment %}
+            <p>Senior Software Engineer</p>
 
             <ul class="social">
                 <li>
@@ -128,9 +129,17 @@
                         <hr>
                         <h3><i class="fa fa-pencil mr-2" aria-hidden="true"></i>Professional Experience</h3>
                         <br>
-                        <p><strong>NanoBnk Private Limited</strong><br>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img src="./images/nanobnk_logo.png" alt="Smiley face" width="42" height="42" style="vertical-align:middle">
+                            </div>
+                            <div class="col-sm-8">
+                            <p><strong>NanoBnk Private Limited</strong><br>
                             <em>Senior Software Engineer</em><br>
                             <strong>2017 to Present</strong> </p>
+                            </div>
+                        </div>
+                        
                         <p>Direct responsibility for applications and infrastructure used to enable the customer experience. Researching, designing, implementing and managing. Identifying areas for modification in existing programs and subsequently developing
                             these modifications. Writing and implementing efficient code. Deploying the application in AWS ubuntu server. Maintaining and upgrading existing systems.
                         </p>
@@ -221,11 +230,11 @@
                         <br>
                         -->
 
-                        <p><strong>Cleaning House Management System</strong><br>
+                        <p><strong>Fischlin Reinigungen GmbH Cleaning</strong><br>
                         </p>
                         <p><em>Description</em></p>
                         <p>
-                            A task tracking system is a software application that keeps track of reported employee tasks.
+                            The broad scope of this project is to digitize the process of updating cleaning status, scheduling, billing and invoicing for the cleaning service of Fischlin Reinigungen GmbH Cleaning. The process today is paper-based, and requires a person to look at paper/email to fill out information about the status of cleaning, number of hours etc, as well as invoicing customers.
                         </p>
                         <br>
 
