--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="mt-4"><a href="index.html">Kumaresan Perumal</a></h2>
 
             <p>Software Engineering Professional</p>
-            {% comment %} <p>Full Stack Web Developer</p> {% endcomment %}
+            <!-- <p>Full Stack Web Developer</p> -->
             <p>Senior Software Engineer</p>
 
             <ul class="social">
@@ -112,7 +112,7 @@
                     <div>
 
                         <h3><i class="fa fa-pencil mr-2" aria-hidden="true"></i>Job Objective</h3>
-                        <p>Full stack software engineer, passionate about creating efficient and scalable software using the latest frontend and backend technologies. Deep interest in fast code, product management, user experience. Very competitive engineer
+                        <p>Senior software engineer, passionate about creating efficient and scalable software using the latest frontend and backend technologies. Deep interest in fast code, product management, user experience. Very competitive engineer
                             with team spirit.</p>
                         <hr>
                         <h3><i class="fa fa-user mr-2" aria-hidden="true"></i>Profile Summary</h3>
