--- a/index.html
+++ b/index.html
@@ -117,13 +117,16 @@
                         <hr>
                         <h3><i class="fa fa-user mr-2" aria-hidden="true"></i>Profile Summary</h3>
                         <ul>
-                            <li>Around 5+ years of IT experience in design, development, implementation and Web Applications using Java</li>
+                            <li>Having 5.5 years of IT experience in design, development, implementation and Web Applications with J2EE.</li>
                             <li>Experience in SDLC (Software Development Life Cycle) that includes requirement Analysis, Design, Coding, Testing, Implementation, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications using Core Java, Java 8, Spring Framework (MVC & REST), Spring Boot, Spring Data JPA, Spring Security, Maven, Log4J </li>
+                            <li>Experience in design and development of web based applications using Core Java, Java 8, Spring Framework (MVC & RESTful APIs), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J. </li>
+                            <li>Experience with MicroServices Basics</li>
+                            <li>Hands on Experience with SonarQube</li>
+                            <li>Hands on Experience with Data structures and Algorithms concepts.</li>
                             <li>Experience with Spring Tool Suite and VS code</li>
                             <li>Experience in client side technologies such as HTML 5, CSS 3, JavaScript, Jquery, JSON, Angular 8, Bootstrap 4, Angular Material 8</li>
                             <li>Experience with PostgreSQL, MySQL, MongoDB</li>
-                            <li>Familiar in deploying applications through Nginx server in Amazon AWS</li>
+                            <li>Familiar in deploying applications through Tomcat, Nginx server in Amazon AWS</li>
                             <li>Strong debugging and troubleshooting skills</li>
                         </ul>
                         <hr>
@@ -148,22 +151,22 @@
                         <hr>
                         <h3><i class="fa fa-cogs mr-2" aria-hidden="true"></i>Skills</h3>
                         <br>
-                        <p><strong>Frameworks :</strong> Spring Boot, Spring Framework (MVC & REST), Spring Data JPA, Spring Security, Django Basics
+                        <p><strong>Frameworks :</strong> Spring Boot, Spring Framework (MVC & RESTful APIs), Spring Data JPA, Spring Security, Microservices Basics, Django Basics
                         </p>
                         <p><strong>Logging Framework :</strong> Log4j</p>
                         <p><strong>Build Automation Tools :</strong> Maven</p>
                         <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
                         <p><strong>Languages :</strong> Core Java & 8, Python 3 Basics</p>
-                        <p><strong>Web Languages :</strong> HTML 4, CSS 3, SCSS, JavaScript, NodeJS(JSruntime)</p>
+                        <p><strong>Web Languages :</strong> HTML 5, CSS 3, SCSS, JavaScript, TypeScript, NodeJS(JSruntime)</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
                         <p><strong>Version Control :</strong> GitHub, GitLab</p>
-                        <p><strong>IDE :</strong> Spring Tool Suite, VS code</p>
+                        <p><strong>IDE :</strong> Spring Tool Suite, VS code, SourceTree(GIT)</p>
                         <p><strong>Bug Tracker Tool :</strong> Trello, Jira, YouTrack</p>
                         <p><strong>Rest Client :</strong> Postman</p>
                         <p><strong>Data Interchange :</strong> JSON</p>
-                        <p><strong>Web Server :</strong> Nginx</p>
+                        <p><strong>Web Server :</strong> Tomcat, Nginx</p>
                         <p><strong>Web Hosting :</strong> Amazon AWS, Digital Ocean</p>
                         <p><strong>Mail Service :</strong> postmarkapp.com, mailchimp.com</p>
                         <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
