--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
                         <ul>
                             <li>Having <b>5.5 Years</b>  of IT experience in analysis, design, development, implementation, testing deployment and web applications using Java/J2EE Technologies</li>
                             <li>Experience in <b>SDLC</b> (Software Development Life Cycle) that includes requirement Analysis, Design, Coding, Testing, Implementation, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications using <b>Core Java, Java 8, Spring(MVC & RESTful APIs), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J</b> </li>
+                            <li>Experience in design and development of web based applications using <b>Core Java, Java 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J</b> </li>
                             <li>Experience with ORM tool Hibernate involving <b>Connection pooling, Mappings, Transaction management, Specification executor</b></li>
-                            <li>Experience with <b>MicroServices</b> Basics</li>
+                            <li>Experience with <b>Microservices</b> basics</li>
+                            <li>Hands on experience with <b>Java 8, Lambda Expression, Functional Interfaces, Optional, DateTime APIs and Streams APIs concepts.</b></li>
                             <li>Experience on Core Java Technologies like <b>Multithreading, Collections and Exception</b> handling mechanisms</li>
                             <li>Experience in implementating <b>Restful Web Services</b></li>
                             <li>Hands on Experience with <b>SonarQube</b></li>
@@ -172,13 +173,13 @@
                         <hr>
                         <h3><i class="fa fa-cogs mr-2" aria-hidden="true"></i>Skills</h3>
                         <br>
-                        <p><strong>Frameworks :</strong> Spring Boot, Spring(MVC & RESTful APIs), Spring Data JPA, Spring Security, Microservices Basics, Django Basics
+                        <p><strong>Frameworks :</strong> Spring Boot, Spring(MVC & RESTful Web Services), Spring Data JPA, Spring Security, Microservices(basics)
                         </p>
                         <p><strong>Logging Framework :</strong> Log4j</p>
                         <p><strong>Build Automation Tools :</strong> Maven</p>
                         <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
-                        <p><strong>Languages :</strong> Core Java & 8, Python 3 Basics</p>
+                        <p><strong>Languages :</strong> Core Java & 8, Python(Basics)</p>
                         <p><strong>Web Languages :</strong> HTML 5, CSS 3, SCSS, JavaScript, TypeScript, NodeJS(JSruntime)</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
