--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                         <ul>
                             <li>Having <b>5.5 Years</b>  of IT experience in analysis, design, development, implementation, testing deployment and web applications using Java/J2EE Technologies</li>
                             <li>Experience in <b>SDLC</b> (Software Development Life Cycle) that includes requirement Analysis, Design, Coding, Testing, Implementation, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications using <b>Core Java, Java 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J</b> </li>
+                            <li>Experience in design and development of web based applications using <b>Core Java & 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J</b> </li>
                             <li>Experience with ORM tool Hibernate involving <b>Connection pooling, Mappings, Transaction management, Specification executor</b></li>
                             <li>Experience with <b>Microservices</b> basics</li>
-                            <li>Hands on experience with <b>Java 8, Lambda Expression, Functional Interfaces, Optional, DateTime APIs and Streams APIs concepts.</b></li>
+                            <li>Hands on experience with <b>Java 8 (Lambda Expression, Functional Interfaces, Optional, DateTime APIs and Streams APIs)</b> concepts.</li>
                             <li>Experience on Core Java Technologies like <b>Multithreading, Collections and Exception</b> handling mechanisms</li>
                             <li>Experience in implementating <b>Restful Web Services</b></li>
                             <li>Hands on Experience with <b>SonarQube</b></li>
