--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
                         <hr>
                         <h3><i class="fa fa-user mr-2" aria-hidden="true"></i>Profile Summary</h3>
                         <ul>
-                            <li>Having <b>5.5 Years</b>  of IT experience in analysis, design, development, implementation, testing deployment and web applications using Java/J2EE Technologies</li>
+                            <li>Having <b>5.5 Years</b>  of IT experience in analysis, design, development, implementation, testing deployment, and web applications using Java/J2EE Technologies</li>
                             <li>Experience in <b>SDLC</b> (Software Development Life Cycle) that includes requirement Analysis, Design, Coding, Testing, Implementation, Maintenance with Agile Methodology</li>
-                            <li>Experience in design and development of web based applications using <b>Core Java & 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger and Log4J</b> </li>
+                            <li>Experience in design and development of web-based applications using <b>Core Java & 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger, and Log4J</b> </li>
                             <li>Experience with ORM tool Hibernate involving <b>Connection pooling, Mappings, Transaction management, Specification executor</b></li>
                             <li>Experience with <b>Microservices</b> basics</li>
-                            <li>Hands on experience with <b>Java 8(Lambda Expression, Functional Interfaces, Optional, DateTime APIs and Streams APIs)</b> concepts.</li>
-                            <li>Experience on Core Java Technologies like <b>Multithreading, Collections and Exception</b> handling mechanisms</li>
-                            <li>Experience in implementating <b>Restful Web Services</b></li>
+                            <li>Hands on experience with <b>Java 8(Lambda Expression, Functional Interfaces, Optional, DateTime APIs, and Stream APIs)</b> concepts.</li>
+                            <li>Experience in Core Java Technologies like <b>Multithreading, Collections, and Exception</b> handling mechanisms</li>
+                            <li>Experience in implementing <b>Restful Web Services</b></li>
                             <li>Hands on Experience with <b>SonarQube</b></li>
-                            <li>Hands on Experience with rest client tool <b>Postman</b></li>
-                            <li>Hands on Experience with <b>Data structures and Algorithms</b> concepts.</li>
+                            <li>Hands on Experience with rest-client tool <b>Postman</b></li>
+                            <li>Hands on Experience with <b>Data structures and Algorithm</b> concepts.</li>
                             <li>Experience with <b>Spring Tool Suite and VS code</b></li>
                             <li>Experience in client side technologies <b>HTML 5, CSS 3, JavaScript, Jquery, JSON, Angular 8, Bootstrap 4, Angular Material 8</b></li>
                             <li>Experience with <b>PostgreSQL, MySQL, MongoDB</b></li>
                             <li>Familiar in deploying applications through <b>Tomcat, Nginx</b> server in Amazon AWS</li>
-                            <li>Experience in creating testcases using <b>JUnit</b>(Basics)</li>
+                            <li>Experience in creating test cases using <b>JUnit</b>(Basics)</li>
                             <li>Strong <b>Debugging and Troubleshooting</b> skills</li>
                         </ul>
                         <hr>
@@ -179,7 +179,7 @@
                         <p><strong>Build Automation Tools :</strong> Maven</p>
                         <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
-                        <p><strong>Languages :</strong> Core Java & 8, Python(Basics)</p>
+                        <p><strong>Languages :</strong> Core Java & 8, Python 3</p>
                         <p><strong>Web Languages :</strong> HTML 5, CSS 3, SCSS, JavaScript, TypeScript, NodeJS(JSruntime)</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
@@ -191,6 +191,8 @@
                         <p><strong>Web Server :</strong> Tomcat, Nginx</p>
                         <p><strong>Web Hosting :</strong> Amazon AWS, Digital Ocean</p>
                         <p><strong>Mail Service :</strong> postmarkapp.com, mailchimp.com</p>
+                        <p><strong>Testing Framework :</strong>Junit</p>
+                        <p><strong>Code Quality :</strong>SonarQube</p>
                         <p><strong>Operating System :</strong> MacOS Catilina, Linux Ubuntu, Windows 10</p>
                         <hr>
 
