--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <li>Experience in design and development of web-based applications using <b>Core Java & 8, Spring(MVC & RESTful Web Services), Spring Boot, Spring Data JPA, Spring Security, JWT, Thymeleaf, Maven, Swagger, and Log4J</b> </li>
                             <li>Experience with ORM tool Hibernate involving <b>Connection pooling, Mappings, Transaction management, Specification executor</b></li>
                             <li>Experience with <b>Microservices</b> basics</li>
-                            <li>Hands on experience with <b>Java 8(Lambda Expression, Functional Interfaces, Optional, DateTime APIs, and Stream APIs)</b> concepts.</li>
+                            <li>Hands on experience with <b>Java 8(Lambda Expression, Functional Interfaces, Default and static methods in interfaces, Optional, DateTime APIs, and Stream APIs)</b> concepts.</li>
                             <li>Experience in Core Java Technologies like <b>Multithreading, Collections, and Exception</b> handling mechanisms</li>
                             <li>Experience in implementing <b>Restful Web Services</b></li>
                             <li>Hands on experience with <b>SonarQube</b></li>
@@ -180,7 +180,7 @@
                         <p><strong>Databases :</strong> PostgreSQL, MySQL, MongoDB</p>
                         <p><strong>Backend Library :</strong> Apache POI</p>
                         <p><strong>Languages :</strong> Core Java & 8, Python 3</p>
-                        <p><strong>Web Languages :</strong> HTML 5, CSS 3, SCSS, JavaScript, TypeScript, NodeJS(JSruntime)</p>
+                        <p><strong>Web Languages :</strong> HTML 5, CSS 3, SCSS, JavaScript</p>
                         <p><strong>Web Frameworks :</strong> Bootstrap 4, Angular 8, Angular Material 8 </p>
                         <p><strong>Web Library :</strong> JQuery, MorrisJS Chart</p>
                         <p><strong>Version Control :</strong> GitHub, GitLab</p>
@@ -263,7 +263,7 @@
                         </p>
                         <p>Roles and Responsibilities: Requirement Analysis, Design and Development</p>
                         
-                        <p>Technologies: Core Java & 8, Spring, Spring Boot, Spring Data JPA, Spring Security, Maven, Thymeleaf, PostgreSQL, HTML, CSS, Bootstrap, jQuery</p>
+                        <p>Technologies: Core Java & 8, Spring MVC, Spring Boot, Spring Data JPA, Spring Security, Maven, Thymeleaf, PostgreSQL, HTML5, CSS3, Bootstrap4, jQuery</p>
                         <br>
 
                         <p><strong>Fischlin Reinigungen GmbH Cleaning</strong><br>
