--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 bluejays5666@gmail.com</p>
               <p class="col-sm-4">
                 <i class="fa fa-map-marker mr-1" aria-hidden="true"></i>
-                Bangalore, India</p>
+                Bengaluru, India</p>
             </div>
 
             <hr/>
@@ -126,6 +126,9 @@
                 <li>Experience with ORM tool Hibernate involving
                   <b>Connection pooling, Mappings, Transaction management, Specification executor</b>
                 </li>
+                <!--<li>Extensively worked on <b>Spring Hibernate ORM and JPA</b></li>
+                <li>Strong experience using <b>MAVEN 4.0</b> Build System</li>
+                <li>Experienced working with technologies such as <b>Log4j, I18N</b></li>-->
                 <li>Experience with
                   <b>Microservices</b>
                   basics</li>
@@ -159,6 +162,7 @@
                 <li>Familiar in deploying applications through
                   <b>Tomcat, Nginx</b>
                   server in Amazon AWS</li>
+                <li>Used <b>AWS and Digital Ocean Cloud</b> servers to host the applications</li>
                 <li>Experience in creating test cases using
                   <b>JUnit</b>(Basics)</li>
                 <li>Strong
@@ -176,42 +180,12 @@
                 <strong>2017 to 2020</strong>
               </p>
 
-              <!--<p>
-                <ul>
-                  <li>Direct responsibility for applications and infrastructure used to enable the customer experience.
-                  </li>
-                  <li>Researching, designing, implementing and managing.
-                  </li>
-                  <li>Identifying areas for modification in existing programs and subsequently developing these modifications.
-                  </li>
-                  <li>Writing and implementing efficient code.
-                  </li>
-                  <li>Deploying the application in AWS ubuntu server.
-                  </li>
-                  <li>Maintaining and upgrading existing systems</li>
-                </ul>
-              </p>-->
-
               <p>
                 <strong>10Decoders Consultancy Private Limited</strong><br>
                 <em>Software Engineer</em><br>
                 <strong>2015 to 2017</strong>
               </p>
-              <!--<p>
-                <ul>
-                  <li>Direct responsibility for applications and infrastructure used to enable the customer experience.
-                  </li>
-                  <li>Researching, designing, implementing and managing.
-                  </li>
-                  <li>Identifying areas for modification in existing programs and subsequently developing these modifications.
-                  </li>
-                  <li>Writing and implementing efficient code.
-                  </li>
-                  <li>Deploying the application in AWS ubuntu server.
-                  </li>
-                  <li>Maintaining and upgrading existing systems</li>
-                </ul>
-              </p>-->
+              
               <hr>
               <h3>
                 <i class="fa fa-cogs mr-2" aria-hidden="true"></i>Skills</h3>
